[package]
name = "PismoChain"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pismochain"
path = "src/main.rs"

[dependencies]
hotstuff_rs = { path = "../hotstuff_rs" }
rand_core = "0.6"
borsh = "0.10"
sui-sdk = { git = "https://github.com/mystenlabs/sui", version = "1.54.0" }
tokio = { version = "1.47.0", features = ["full"] }
anyhow = "1.0.98"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
serde_json = "1.0.141"
wormhole-vaas = "0.1.1"
base64 = "0.21"
k256 = { version = "0.13", features = ["ecdsa"] }
jmt = "0.11.0"
sha3 = "0.10"
sha2 = "0.10"
bincode = "1"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
bitflags = { version = "2", features = ["serde"] }
bs58 = "0.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
jsonrpsee = { version = "0.25", features = ["server", "macros", "tokio"] }
jsonrpsee-http-server = "0.15.1"
jsonrpsee-types = "0.25.1"
tracing = "0.1.41"
blake2 = "0.10"
bcs = "0.1"
indexmap = { version = "2.0", features = ["serde"] }
